src/css/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: "Roboto", sans-serif;
}

:root {
    --primary-color: #564b7a;
    --secondary-color: #8b8daf;
    --background-color: #f0f0f0;
    --text-color: #333333;
}

.logo {
    width: 100px;
    height: auto;
    padding-left: 20px;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

}

nav{
    display: grid;
    grid-template-rows: 0fr;
    text-align: center;
    max-height: 0; /* Nav is hidden */
    overflow: hidden; /* It covers the content when the nav is closed */
    transition: max-height 0.5s ease, opacity 0.7s ease; /* Animation */
    opacity: 0; /* It starts completely transparent */
    z-index: 1;
}

nav a{
    text-decoration: none;
    color: var(--text-color);
    padding: 15px 0;
    display: block;
    border-bottom: 1px solid #ddd;
}

nav.open{
    display: flex;
    flex-direction: column;
    max-height: 300px; /* Ajusta según el contenido máximo del menú */
    opacity: 1; /* Totalmente visible */
}

#menuButton {
    position: absolute;
    top: 0;
    right: 0;
    background: none;
    border: none;
    font-size: 24px;
    cursor: pointer;
    padding: 20px;
    z-index: 2;
}

#menuButton::before{
    content: "\2630";
}

#menuButton.open::before{
    content: "\2715";
}

#signInButton {
    background-color: var(--primary-color);
    color: white;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    width: 100px;
    margin: 0 auto;
    margin-top: 10px;
}

.homeHeroDiv{
    width: 100%;
}

picture img{
    width: 100%;
    height: auto;
    z-index: -5;
    object-fit: cover;
    overflow: hidden;
}

.heroText{
    color: var(--text-color);
    text-align: center;
    margin-top: 100px;
    padding: 20px;
}

.heroText h1{
    font-size: 30px;
    line-height: 40px;
}

.heroText p{
    font-size: 18px;
    max-width: 600px;
    margin: 20px auto;
    line-height: 30px;

}

/*Start button style*/
.startedButton button{
    background-color: var(--primary-color);
    color: white;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
}


.startedButton button:hover{
    background-color: var(--secondary-color);
}

.patientsFeatures{
    width: 100%;
    margin-top: 100px;
    text-align: center;
    padding-bottom: 100px;
    background-color: #cccccc1a;
}

.patientsFeatures h2{
    color: var(--text-color);
}

.patientsFeatures p{
    color: var(--text-color);
    max-width: 600px;
    margin: 0 auto;
    text-align: left;
    padding: 20px;
    line-height: 30px;
}

.patientsFeatures img{
    width: 400px;
    height: auto;
    margin-top: 20px;
}

.patientsFeatures button{
    margin-top: 20px;
}

.appointmentsFeatures{
    margin-top: 100px;
    text-align: center;
    padding-bottom: 100px;
    border-bottom: solid 1px #ccc;
}
.appointmentsFeatures h2{
    color: var(--text-color);
}

.appointmentsFeatures p{
    color: var(--text-color);
    max-width: 600px;
    margin: 0 auto;
    text-align: left;
    line-height: 30px;
    padding: 20px;
}

.appointmentsFeatures img{
    width: 400px;
    height: auto;
    margin-top: 20px;
}


.reportFeatures{
    margin-top: 100px;
    text-align: center;
    padding-bottom: 100px;
    border-bottom: solid 1px #ccc;
}

.reportFeatures h2{
    color: var(--text-color);
}

.reportFeatures p{
    color: var(--text-color);
    max-width: 600px;
    margin: 0 auto;
    text-align: left;
    line-height: 30px;
    padding: 20px;
}

.reportFeatures img{
    width: 400px;
    height: auto;
    margin-top: 20px;
}

.reportFeatures button{
    margin-top: 20px;
}

.customFieldsFeatures{
    margin-top: 100px;
    text-align: center;
    padding-bottom: 100px;
    border-bottom: solid 1px #ccc;
}

.customFieldsFeatures h2{
    color: var(--text-color);
}

.customFieldsFeatures p{
    color: var(--text-color);
    max-width: 600px;
    margin: 0 auto;
    text-align: left;
    line-height: 30px;
    padding: 20px;
}

.customFieldsFeatures img{
    width: 400px;
    height: auto;
    margin-top: 20px;
}

.pricingFeatures{

    text-align: center;
    margin-bottom: 50px;
    background-color: #8b8daf54;
    padding: 80px 100px;
}

.pricingFeatures h2{
    color: var(--text-color);
}

.pricingFeatures p{
    color: var(--text-color);
    max-width: 600px;
    margin: 0 auto;
    line-height: 25px;
}

.pricingFeatures button{
    margin-top: 20px;
}

footer{
    display: grid;
    grid-template-columns: 1fr 1fr;
    background-color: var(--text-color);
    color: white;
    padding: 30px 0;
}

@keyframes rotation{
    from{
        transform: rotate(0deg);
    }
    to{
        transform: rotate(360deg);
    }
}

.footerLogo{
    grid-column: 1;
    grid-row: 1;
    width: 80px;
    height: auto;
    animation: rotation 10s linear infinite;
    padding: 20px;
}

.copyright{
    grid-column: 1/3;
    grid-row: 2;
    text-align: center;
    margin-top: 20px;
}

.socialMedia{
    grid-column: 1/3;
    grid-row: 1;
    text-align: center;
    align-content: center;

}

.socialMedia img{
    width: 30px;
    height: auto;
    margin: 10px;
    filter: invert(1);
}

/*Media Queries*/

@media screen and (min-width: 540px) {

    .patientsFeatures img,
    .appointmentsFeatures img,
    .reportFeatures img,
    .customFieldsFeatures img{
        width: 90%;
    }

    .pricingFeatures h2{
        font-size: 35px;
        line-height: 50px;
    }

    .pricingFeatures p{
        font-size: 20px;
        line-height: 35px;
    }
    
}

@media screen and (min-width: 1000px) {

    header{
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 10px 20px;
    }

    @keyframes upAndDown{
        0% {transform: translateY(0px);}
        50% {transform: translateY(-10px);}
        100% {transform: translateY(0px);}
    }

    #menuButton {
        display: none;
    }

    nav{
        max-height: none;
        opacity: 1;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    nav ul {
        display: flex;
        gap: 20px;
        justify-content: center;
        align-items: center;
    }

    nav a{
        border: none;
        padding: 0 15px;
    }

    .signInContainer{
        margin-left: 20px;
        align-self: center;
    }

    #signInButton {
        width: auto;
        margin: 0;
    }
    
    .patientsFeatures{
        display: grid;
        grid-template-columns: 1fr 1fr;
        padding: 50px;
        justify-items: center;
        align-items: center;
    }

    .patientsFeatures img{
        grid-column: 1;
        grid-row: 1/4;
        width: 100%;
        animation: upAndDown 3s ease-in-out infinite;
    }

    .patientsFeatures h2{
        grid-column: 2;
        font-size: 35px;
    }

    .patientsFeatures p{
        grid-column: 2;
        font-size: 18px;
        line-height: 40px;
        
    }

    .patientsFeatures a{
        grid-column: 2;
    }

    .appointmentsFeatures{
        display: grid;
        grid-template-columns: 1fr 1fr;
        padding: 50px;
        justify-items: center;
        align-items: center;
    }

    .appointmentsFeatures h2{
        font-size: 35px;
    }

    .appointmentsFeatures img{
        grid-column: 2;
        grid-row: 1/4;
        width: 100%;
        animation: upAndDown 3s ease-in-out infinite;
    }

    .appointmentsFeatures p{
        font-size: 18px;
        line-height: 40px;
    }

    .reportFeatures{
        display: grid;
        grid-template-columns: 1fr 1fr;
        padding: 50px;
        justify-items: center;
        align-items: center;
    }

    .reportFeatures h2{
        grid-column: 2;
        font-size: 35px;
    }

    .reportFeatures img{
        grid-column: 1;
        grid-row: 1/4;
        width: 100%;
        animation: upAndDown 3s ease-in-out infinite;
    }

    .reportFeatures p{
        grid-column: 2;
        font-size: 18px;
        line-height: 40px;
    }

    .customFieldsFeatures{
        display: grid;
        grid-template-columns: 1fr 1fr;
        padding: 50px;
        justify-items: center;
        align-items: center;
    }

    .customFieldsFeatures h2{
        grid-column: 1;
        font-size: 35px;
    }

    .customFieldsFeatures img{
        grid-column: 2;
        grid-row: 1/4;
        width: 100%;
        animation: upAndDown 3s ease-in-out infinite;
    }

    .customFieldsFeatures p{
        grid-column: 1;
        font-size: 18px;
        line-height: 40px;
    }

    .pricingFeatures{
        padding: 100px 200px;
    }

    .footerLogo{
        width: 100px;
    }
}

